Improved menu system. Added selection of speed/difficulty. Added time attack. Changed replay system. Changed netplay - this version will be incompatible with earlier versions. Broke puzzle mode, if it wasn't already broken. Key config and endless replay will persist through restarts. Switched json libraries.

--- a/THANKS
+++ b/THANKS
@@ -1,6 +1,3 @@
 This or some other file should thank the people whose work I depend on:
-    lua devs
-    LOVE devs
-    Brandon for making V3PdP
-    Dr. Parberry for teaching the game dev
-    Anyone who contributed after I put this on github
+    love devs - love2d.org
+    Brandon Lockaby, author of the original game engine - gbrandon at gmail dot com
